syntax = "proto3";
package stoptimes;

option java_package = "org.mobilitydata.gtfsproto";
option java_outer_classname = "StopTimesProto";

message StopTime {
    string trip_id = 1;
    string arrival_time = 2;
    string departure_time = 3;
    string stop_id = 4;
    uint32 stop_sequence = 5;
    string stop_headsign = 6;

    enum PickupDropOffType {
        REGULAR = 0;
        NONE = 1;
        AGENCY = 2;
        DRIVER = 3;
    }
    PickupDropOffType pickup_type = 7;
    PickupDropOffType drop_off_type = 8;

    float shape_dist_traveled = 9;

    enum TimePrecision {
        APPROXIMATE = 0;
        EXACT = 1;
    }

    TimePrecision timepoint = 10;
}

message stopTimeCollection {
    repeated StopTime stopTimes = 1;
}